<?xml version="1.0"?>
<package>
  <name>g2o_based_mapping</name>
  <version>0.0.0</version>
  <description>The g2o_based_mapping package for lecture Advanced Robotics 2017</description>
  <maintainer email="steinbauer@ist.tugraz.at">Gerald Steinbauer</maintainer>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>stage_ros</build_depend>
  <build_depend>stage_utils</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libg2o</build_depend>
  <run_depend>eigen</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cmake_modules</run_depend>
  <run_depend>libg2o</run_depend>
  <export>
  </export>
</package>
